--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <div class="msg-container hide">
+    <p class="msg"></p>
+    <button class="newBtn">New Game</button>
+    </div>
+    <div class="heading"><h1>Tic Tac Toe</h1></div>
     <div class="container">
         <div class="game">
             <button class="box"></button>
